--- a/flextable/vue/package.json
+++ b/flextable/vue/package.json
@@ -33,6 +33,7 @@
     "sass-loader": "^6.0.6",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
+    "vue2-editor": "^2.5.0",
     "webpack": "^3.6.0"
   }
 }
