--- a/src/vue/package.json
+++ b/src/vue/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flextable",
   "description": "Flexible table plugin for Craft CMS",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "author": "Knut Svangstu <knut@vangenplotz.no>",
   "license": "MIT",
   "private": true,
@@ -11,6 +11,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "lodash": "^4.17.10",
     "vue": "^2.5.11",
     "vue-i18n": "^7.8.0",
     "vuex": "^3.0.1"
